--- a/index.html
+++ b/index.html
@@ -1,7 +1,102 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 	<body>
 		<h1>Hello World</h1>
 		<p>I*m hosted with Github Pages.</p>
 	</body>
+</html>
+-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>LOPI | Media &amp; Engineering</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type=text/css href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?familiy=Roboto+Slab">
+    </head>
+
+    <body>
+
+        <!--HEADER------------------------------------>
+
+        <header>
+            <div id="logo">
+                <a href="#">
+                    <img src="img/logo_darkgray.png" alt="Logo">
+                </a>
+            </div>
+
+            <nav id="main-nav">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!--HOME-------------------------------------->
+
+        <section id="home">
+            <hr>
+            <h1>LOPI</h1>
+            <h2>Media &amp; Engineering</h2>
+            <a href="#about">
+                <img src="img/pfeil.png" alt="Pfeil">
+            </a>
+        </section>
+
+        <!--ABOUT-------------------------------------->
+
+        <section id="about">
+            <h3>About</h3>
+            <hr>
+            <img src="img/avatar.png" alt="Avatar">
+            <h4>Philip / lopi</h4>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </section>
+
+        <!--WORK-------------------------------------->
+
+        <section id="work">
+            <h3>Work</h3>
+            <hr>
+
+            <div id="projects">
+                <ul>
+                    <li><a target="_self" href="img/Project_01.jpeg"><img src="img/Project_01_thumb.jpg" alt="Project_01"></a></li>
+                    <li><a target="_blank" href="img/Project_02.jpeg"><img src="img/Project_02_thumb.jpg" alt="Project_02"></a></li>
+                    <li><a target="_blank" href="img/Project_03.jpeg"><img src="img/Project_03_thumb.jpg" alt="Project_03"></a></li>
+                    <li><a target="_blank" href="img/Project_04.jpeg"><img src="img/Project_04_thumb.jpg" alt="Project_04"></a></li>
+                    <li><a target="_blank" href="img/Project_05.jpeg"><img src="img/Project_05_thumb.jpg" alt="Project_05"></a></li>
+                    <li><a target="_blank" href="img/Project_06.jpeg"><img src="img/Project_06_thumb.jpg" alt="Project_06"></a></li>
+                    <!-- <li><a href="#"><img src="http://placehold.it/280x170" alt="Project_06"></a></li> -->
+                </ul>
+            </div>
+        </section>
+
+        <!--CONTACT-------------------------------------->
+
+        <section id="contact">
+            <h3>Contact</h3>
+            <hr>
+
+            <form>
+                <input type="email" tabindex="1" placeholder="E-Mail"><br>
+                <input type="text" tabindex="2" placeholder="Betreff"><br>
+                <textarea tabidex="3" placeholder="Nachricht"></textarea><br>
+                <input class="button" type="submit">
+            </form>
+        </section>
+
+        <!--FOOTER------------------------------------>
+
+        <footer>
+            <p>
+                &copy; 2019-2020 lopi
+            </p>
+        </footer>
+    </body>
 </html>
